--- a/Wykop-Webscrap.ipynb
+++ b/Wykop-Webscrap.ipynb
@@ -4909,7 +4909,7 @@
     }
    ],
    "source": [
-    "\n",
+    "%%capture \n",
     "####################REMOVE %%capture LINE IF YOU WANT TO SEE THE OUTPUT############################################\n",
     "#we use %%capture because the output is too long for demonstrative purposes\n",
     "#using beautiful soup to parse the html\n",
